<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hokuyo3d</name>
  <version>1.0.0</version>
  <description>ROS2 driver node for HOKUYO 3D LIDARs</description>
  <maintainer email="Kazuki-Fujiwara@outlook.com">kindai university</maintainer>
  <license>BSD</license>

  <author email="Kazuki-Fujiwara@outlook.com">Kazuki Fujiwara</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>libboost-system-dev</depend>
  <depend>launch_ros</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
