<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vsspdebag</name>
  <version>1.0.3</version>
  <description>vssp communication debag program in Ros2</description>
  <maintainer email="Kazuki-Fujiwara@outlook.com">kindai university</maintainer>
  <license>BSD</license>

  <author email="Kazuki-Fujiwara@outlook.com">Kazuki</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>vsspdebag_msgs</depend>
  <depend>libboost-system-dev</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
